--- a/MRT-Scan-Erkennung/alzheimer_EfficientNet.ipynb
+++ b/MRT-Scan-Erkennung/alzheimer_EfficientNet.ipynb
@@ -119,6 +119,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#seed everything\n",
+    "seed = 100\n",
+    "random.seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "torch.manual_seed(seed)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
